--- a/ncsa-security-common/ncsa-security-util/pom.xml
+++ b/ncsa-security-common/ncsa-security-util/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>edu.uiuc.ncsa.security</groupId>
         <artifactId>ncsa-security-common</artifactId>
-        <version>3.4-SNAPSHOT</version>
+        <version>3.3.0.2</version>
     </parent>
 
     <artifactId>ncsa-security-util</artifactId>
@@ -75,13 +75,13 @@
         <dependency>
             <groupId>edu.uiuc.ncsa.security</groupId>
             <artifactId>ncsa-security-core</artifactId>
-            <version>3.4-SNAPSHOT</version>
+            <version>3.3.0.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>edu.uiuc.ncsa.security</groupId>
             <artifactId>ncsa-security-core</artifactId>
-            <version>3.4-SNAPSHOT</version>
+            <version>3.3.0.2</version>
         </dependency>
 
 
