--- a/ncsa-security-delegation/ncsa-security-delegation-server/pom.xml
+++ b/ncsa-security-delegation/ncsa-security-delegation-server/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>edu.uiuc.ncsa.security.delegation</groupId>
         <artifactId>ncsa-security-delegation</artifactId>
-        <version>3.4-SNAPSHOT</version>
+        <version>3.3.0.2</version>
     </parent>
     <artifactId>ncsa-security-delegation-server</artifactId>
     <name>NCSA delegation abstract service layer</name>
@@ -15,7 +15,7 @@
         <dependency>
             <groupId>edu.uiuc.ncsa.security.delegation</groupId>
             <artifactId>ncsa-security-delegation-common</artifactId>
-            <version>3.4-SNAPSHOT</version>
+            <version>3.3.0.2</version>
         </dependency>
 
         <dependency>
