Updating compiler settings to try nd get Travis working.

--- a/ncsa-security-common/ncsa-security-util/pom.xml
+++ b/ncsa-security-common/ncsa-security-util/pom.xml
@@ -29,11 +29,15 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
+                <version>3.5.1</version>
+
                 <!-- This next argument suppresses the built-in warnings that we are using Sun's
                  PKCS10 classes. -->
                 <configuration>
                     <compilerArgument>-XDignore.symbol.file</compilerArgument>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <forceJavacCompilerUse>true</forceJavacCompilerUse>
                 </configuration>
             </plugin>
 
