--- a/ncsa-security-delegation/pom.xml
+++ b/ncsa-security-delegation/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>edu.uiuc.ncsa.security</groupId>
         <artifactId>ncsa-security-all</artifactId>
-        <version>4.0.1</version>
+        <version>4.1-SNAPSHOT</version>
     </parent>
 
     <groupId>edu.uiuc.ncsa.security.delegation</groupId>
