--- a/ncsa-security-delegation/ncsa-security-delegation-client/pom.xml
+++ b/ncsa-security-delegation/ncsa-security-delegation-client/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>edu.uiuc.ncsa.security.delegation</groupId>
         <artifactId>ncsa-security-delegation</artifactId>
-        <version>4.1-SNAPSHOT</version>
+        <version>4.1.0</version>
     </parent>
     <artifactId>ncsa-security-delegation-client</artifactId>
     <name>NCSA delegation layer for clients</name>
@@ -15,12 +15,12 @@
         <dependency>
             <groupId>edu.uiuc.ncsa.security</groupId>
             <artifactId>ncsa-security-util</artifactId>
-            <version>4.1-SNAPSHOT</version>
+            <version>4.1.0</version>
         </dependency>
         <dependency>
             <groupId>edu.uiuc.ncsa.security.delegation</groupId>
             <artifactId>ncsa-security-delegation-common</artifactId>
-            <version>4.1-SNAPSHOT</version>
+            <version>4.1.0</version>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
