--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <groupId>edu.uiuc.ncsa.security</groupId>
     <artifactId>ncsa-security-all</artifactId>
-    <version>4.1-SNAPSHOT</version>
+    <version>4.1.0</version>
     <name>Parent module for everything of interest.</name>
     <packaging>pom</packaging>
     <description>Generic security code for delegation.</description>
