--- a/ncsa-security-delegation/ncsa-security-delegation-common/pom.xml
+++ b/ncsa-security-delegation/ncsa-security-delegation-common/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>edu.uiuc.ncsa.security.delegation</groupId>
         <artifactId>ncsa-security-delegation</artifactId>
-        <version>4.2-SNAPSHOT</version>
+        <version>4.1.2</version>
     </parent>
 
     <artifactId>ncsa-security-delegation-common</artifactId>
@@ -34,19 +34,19 @@
         <dependency>
             <groupId>edu.uiuc.ncsa.security</groupId>
             <artifactId>ncsa-security-util</artifactId>
-            <version>4.2-SNAPSHOT</version>
+            <version>4.1.2</version>
         </dependency>
         <dependency>
             <groupId>edu.uiuc.ncsa.security</groupId>
             <artifactId>ncsa-security-util</artifactId>
-            <version>4.2-SNAPSHOT</version>
+            <version>4.1.2</version>
             <scope>test</scope>
             <type>test-jar</type>
         </dependency>
         <dependency>
             <groupId>edu.uiuc.ncsa.security</groupId>
             <artifactId>ncsa-security-storage</artifactId>
-            <version>4.2-SNAPSHOT</version>
+            <version>4.1.2</version>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
