--- a/ncsa-security-common/ncsa-security-core/pom.xml
+++ b/ncsa-security-common/ncsa-security-core/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>edu.uiuc.ncsa.security</groupId>
         <artifactId>ncsa-security-common</artifactId>
-        <version>4.4-SNAPSHOT</version>
+        <version>4.3</version>
     </parent>
 
     <artifactId>ncsa-security-core</artifactId>
