--- a/ncsa-security-delegation/ncsa-security-oauth-2.0/pom.xml
+++ b/ncsa-security-delegation/ncsa-security-oauth-2.0/pom.xml
@@ -73,6 +73,12 @@
             <artifactId>httpclient</artifactId>
             <version>4.5.2</version>
         </dependency>
+        <dependency>
+            <groupId>edu.uiuc.ncsa.security</groupId>
+            <artifactId>ncsa-qdl</artifactId>
+            <version>4.4-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 </project>
