--- a/ncsa-qdl/pom.xml
+++ b/ncsa-qdl/pom.xml
@@ -5,14 +5,14 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>edu.uiuc.ncsa.security</groupId>
-        <artifactId>ncsa-security-common</artifactId>
-        <version>4.4-SNAPSHOT</version>
+        <artifactId>ncsa-security-all</artifactId>
+        <version>4.4</version>
     </parent>
 
     <artifactId>ncsa-qdl</artifactId>
     <name>The QD Language</name>
     <packaging>jar</packaging>
-    <version>1.0-QDL-SNAPSHOT</version>
+    <version>1.0</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <additionalparam>-Xdoclint:none</additionalparam>
@@ -125,24 +125,24 @@
         <dependency>
             <groupId>edu.uiuc.ncsa.security</groupId>
             <artifactId>ncsa-security-core</artifactId>
-            <version>4.4-SNAPSHOT</version>
+            <version>4.4</version>
         </dependency>
         <dependency>
             <groupId>edu.uiuc.ncsa.security</groupId>
             <artifactId>ncsa-security-core</artifactId>
-            <version>4.4-SNAPSHOT</version>
+            <version>4.4</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>edu.uiuc.ncsa.security</groupId>
             <artifactId>ncsa-security-util</artifactId>
-            <version>4.4-SNAPSHOT</version>
+            <version>4.4</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>edu.uiuc.ncsa.security</groupId>
             <artifactId>ncsa-security-util</artifactId>
-            <version>4.4-SNAPSHOT</version>
+            <version>4.4</version>
         </dependency>
         <dependency>
             <groupId>net.sf.json-lib</groupId>
@@ -158,34 +158,34 @@
         <dependency>
             <groupId>edu.uiuc.ncsa.security</groupId>
             <artifactId>ncsa-security-util</artifactId>
-            <version>4.4-SNAPSHOT</version>
+            <version>4.4</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>edu.uiuc.ncsa.security</groupId>
             <artifactId>ncsa-security-util</artifactId>
-            <version>4.4-SNAPSHOT</version>
+            <version>4.4</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>edu.uiuc.ncsa.security</groupId>
             <artifactId>ncsa-security-util</artifactId>
-            <version>4.4-SNAPSHOT</version>
+            <version>4.4</version>
         </dependency>
         <dependency>
             <groupId>edu.uiuc.ncsa.security</groupId>
             <artifactId>ncsa-security-util</artifactId>
-            <version>4.4-SNAPSHOT</version>
+            <version>4.4</version>
         </dependency>
         <dependency>
             <groupId>edu.uiuc.ncsa.security</groupId>
             <artifactId>ncsa-security-core</artifactId>
-            <version>4.4-SNAPSHOT</version>
+            <version>4.4</version>
         </dependency>
         <dependency>
             <groupId>edu.uiuc.ncsa.security</groupId>
             <artifactId>ncsa-security-storage</artifactId>
-            <version>4.4-SNAPSHOT</version>
+            <version>4.4</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
