--- a/ncsa-qdl/pom.xml
+++ b/ncsa-qdl/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>edu.uiuc.ncsa.security</groupId>
-        <artifactId>ncsa-security-common</artifactId>
+        <artifactId>ncsa-security-all</artifactId>
         <version>4.4-SNAPSHOT</version>
     </parent>
 
