--- a/ncsa-qdl/pom.xml
+++ b/ncsa-qdl/pom.xml
@@ -5,7 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>
-            edu.uiuc.ncsa.security</groupId>
+            edu.uiuc.ncsa.security
+        </groupId>
         <artifactId>ncsa-security-all</artifactId>
         <version>4.5-SNAPSHOT</version>
     </parent>
@@ -24,6 +25,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>2.3.2</version>
+
                 <executions>
                     <execution>
                         <goals>
@@ -32,7 +34,7 @@
                     </execution>
                 </executions>
             </plugin>
-          
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -61,33 +63,105 @@
                     <forkMode>perTest</forkMode>
                 </configuration>
             </plugin>
-        <!--    <plugin>
-                <groupId>org.antlr</groupId>
-                <artifactId>antlr4-maven-plugin</artifactId>
-                <version>4.7.2</version>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.14.1</version>
                 <configuration>
-                    <sourceDirectory>
-                        /home/ncsa/dev/ncsa-git/security-lib/ncsa-security-common/ncsa-security-util/src/main/antlr4/
-                    </sourceDirectory>
-                    <outputDirectory>
-                        /home/ncsa/dev/ncsa-git/security-lib/ncsa-security-common/ncsa-security-util/src/main/java/edu/uiuc/ncsa/security/util/qdl/generated
-                    </outputDirectory>
-                    <includes>
-                        <include>QDLParser.g4</include>
-                    </includes>
-                    <visitor>false</visitor>
-                    <listener>true</listener>
+                    <excludes>
+                        <exclude>**/*Test.java</exclude>
+                        <exclude>**/*Suite.java</exclude>
+                    </excludes>
+                    <forkMode>perTest</forkMode>
                 </configuration>
+            </plugin>
+            <!--            <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-jar-plugin</artifactId>
+                            <version>3.1.0</version>
+                            <executions>
+                                <execution>
+                                    <inherited>true</inherited>
+                                    <phase>package</phase>
+                                    <goals>
+                                        <goal>jar</goal>
+                                    </goals>
+                                </execution>
+                            </executions>
+
+                            <configuration>
+
+                                <archive>
+                                    <manifest>
+                                        <addClasspath>true</addClasspath>
+                                    </manifest>
+                                    <manifestEntries>
+                                        <application-version>${pom.version}</application-version>
+                                        <application-name>${pom.name}</application-name>
+                                        <build-time>${timestamp}</build-time>
+                                        <implementation-version>${project.version}</implementation-version>
+                                        <implementation-build>${buildNumber}</implementation-build>
+                                    </manifestEntries>
+                                </archive>
+
+                            </configuration>
+                        </plugin>-->
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>buildnumber-maven-plugin</artifactId>
+                <version>1.3</version>
                 <executions>
                     <execution>
-                        <id>antlr</id>
+                        <phase>validate</phase>
                         <goals>
-                            <goal>antlr4</goal>
+                            <goal>create</goal>
                         </goals>
-
                     </execution>
                 </executions>
-            </plugin>-->
+                <configuration>
+                    <doCheck>false</doCheck>
+                    <doUpdate>false</doUpdate>
+
+
+                    <!--
+                     Generate sequence build number based on:
+                     build number and timestamp
+                    -->
+                    <format>Build: #{0} ({1,date,yyyy-MM-dd'T'HH:mm:ss.SSSXXX})</format>
+                    <items>
+                        <item>buildNumber\d*</item>
+                        <item>timestamp</item>
+                    </items>
+                </configuration>
+            </plugin>
+            <!--    <plugin>
+                    <groupId>org.antlr</groupId>
+                    <artifactId>antlr4-maven-plugin</artifactId>
+                    <version>4.7.2</version>
+                    <configuration>
+                        <sourceDirectory>
+                            /home/ncsa/dev/ncsa-git/security-lib/ncsa-security-common/ncsa-security-util/src/main/antlr4/
+                        </sourceDirectory>
+                        <outputDirectory>
+                            /home/ncsa/dev/ncsa-git/security-lib/ncsa-security-common/ncsa-security-util/src/main/java/edu/uiuc/ncsa/security/util/qdl/generated
+                        </outputDirectory>
+                        <includes>
+                            <include>QDLParser.g4</include>
+                        </includes>
+                        <visitor>false</visitor>
+                        <listener>true</listener>
+                    </configuration>
+                    <executions>
+                        <execution>
+                            <id>antlr</id>
+                            <goals>
+                                <goal>antlr4</goal>
+                            </goals>
+
+                        </execution>
+                    </executions>
+                </plugin>-->
         </plugins>
     </build>
     <dependencies>
@@ -215,13 +289,21 @@
                 <plugins>
                     <plugin>
                         <artifactId>maven-assembly-plugin</artifactId>
+                        <version>3.1.0</version>
                         <configuration>
+
                             <archive>
                                 <manifest>
                                     <addClasspath>true</addClasspath>
                                     <mainClass>edu.uiuc.ncsa.qdl.workspace.QDLWorkspace</mainClass>
-
                                 </manifest>
+                                <manifestEntries>
+                                    <application-version>${pom.version}</application-version>
+                                    <application-name>${pom.name}</application-name>
+                                    <build-time>${timestamp}</build-time>
+                                    <implementation-version>${project.version}</implementation-version>
+                                    <implementation-build>${buildNumber}</implementation-build>
+                                </manifestEntries>
                             </archive>
                             <descriptorRefs>
                                 <descriptorRef>jar-with-dependencies</descriptorRef>
