Found and fixed a parser bug, which exists because pretty much every tutorial on writing parser for arithmetical operations is wrong. Unary +/- are at same level as + and -, but all good parser tutorials place them above exponentiation and multiplication/division. Added a bunch of tests to make sure this never surfaces again.

--- a/ncsa-qdl-gui/pom.xml
+++ b/ncsa-qdl-gui/pom.xml
@@ -16,6 +16,11 @@
             <artifactId>lanterna</artifactId>
             <version>3.0.2</version>
         </dependency>
+        <dependency>
+            <groupId>edu.uiuc.ncsa.security</groupId>
+            <artifactId>ncsa-qdl</artifactId>
+            <version>1.1-QDL-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -31,6 +36,42 @@
                 </configuration>
                 <version>3.8.1</version>
             </plugin>
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>3.1.0</version>
+                <configuration>
+
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <!--<mainClass>edu.uiuc.ncsa.gui.GUIDemo</mainClass> -->
+                            <mainClass>edu.uiuc.ncsa.gui.p2.QDLGUIWorkspace</mainClass>
+                        </manifest>
+                        <manifestEntries>
+                            <application-version>${pom.version}</application-version>
+                            <application-name>${pom.name}</application-name>
+                            <build-time>${timestamp}</build-time>
+                            <implementation-version>${project.version}</implementation-version>
+                            <implementation-build>${buildNumber}</implementation-build>
+                        </manifestEntries>
+                    </archive>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                    <finalName>qdl-gui</finalName>
+
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-my-jar-with-dependencies</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
         </plugins>
     </build>
 </project>
