--- a/ncsa-qdl/pom.xml
+++ b/ncsa-qdl/pom.xml
@@ -110,6 +110,11 @@
     <dependencies>
 
         <dependency>
+            <groupId>com.jayway.jsonpath</groupId>
+            <artifactId>json-path</artifactId>
+            <version>2.4.0</version>
+        </dependency>
+        <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
             <version>1.10</version>
