--- a/ncsa-qdl-gui/pom.xml
+++ b/ncsa-qdl-gui/pom.xml
@@ -5,12 +5,12 @@
     <parent>
         <artifactId>ncsa-security-all</artifactId>
         <groupId>edu.uiuc.ncsa.security</groupId>
-        <version>4.5-SNAPSHOT</version>
+        <version>4.4.3</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>ncsa-qdl-gui</artifactId>
-    <version>1.1-QDL-SNAPSHOT</version>
+    <version>1.0.3</version>
 
     <name>Text mode GUI for the QD Language</name>
 
@@ -23,7 +23,7 @@
         <dependency>
             <groupId>edu.uiuc.ncsa.security</groupId>
             <artifactId>ncsa-qdl</artifactId>
-            <version>1.1-QDL-SNAPSHOT</version>
+            <version>1.0.3</version>
         </dependency>
     </dependencies>
 
