--- a/ncsa-qdl-gui/pom.xml
+++ b/ncsa-qdl-gui/pom.xml
@@ -30,6 +30,16 @@
               <artifactId>jexer</artifactId>
               <version>0.3.2</version>
             </dependency>
+        <dependency>
+            <groupId>org.jline</groupId>
+            <artifactId>jline</artifactId>
+            <version>3.14.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jline</groupId>
+            <artifactId>jline</artifactId>
+            <version>3.14.1</version>
+        </dependency>
     </dependencies>
 
 
