Much work on IO for CLIs.

--- a/ncsa-security-common/ncsa-security-util/pom.xml
+++ b/ncsa-security-common/ncsa-security-util/pom.xml
@@ -72,7 +72,11 @@
         </plugins>
     </build>
     <dependencies>
-
+        <dependency>
+            <groupId>org.jline</groupId>
+            <artifactId>jline</artifactId>
+            <version>3.14.1</version>
+        </dependency>
         <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
@@ -125,6 +129,12 @@
             <groupId>org.antlr</groupId>
             <artifactId>antlr4</artifactId>
             <version>4.7.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jline</groupId>
+            <artifactId>jline</artifactId>
+            <version>3.14.1</version>
+            <scope>compile</scope>
         </dependency>
 
 
