--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,9 @@
 
 /ncsa-qdl/src/main/java/edu/uiuc/ncsa/qdl/util/AWTConsole.java
 /ncsa-qdl/src/main/java/edu/uiuc/ncsa/qdl/util/Console.java
+/ncsa-qdl/src/main/docs/.~lock.qdl_configuration.odt#
+/ncsa-qdl/src/main/docs/.~lock.qdl_extensions.odt#
+/ncsa-qdl/src/main/docs/.~lock.qdl_reference.odt#
+/ncsa-qdl/src/main/docs/.~lock.qdl_scripting.odt#
+/ncsa-qdl/src/main/docs/.~lock.qdl_server_scripts.odt#
+/ncsa-qdl/src/main/docs/.~lock.qdl_workspace.odt#
