Improvements, Added a head function, tests.

--- a/ncsa-security-common/ncsa-security-core/pom.xml
+++ b/ncsa-security-common/ncsa-security-core/pom.xml
@@ -42,6 +42,12 @@
             <artifactId>javax.inject</artifactId>
             <version>1</version>
         </dependency>
+        <dependency>
+            <groupId>net.sf.json-lib</groupId>
+            <artifactId>json-lib</artifactId>
+            <version>2.4</version>
+            <classifier>jdk15</classifier>
+        </dependency>
         <!--
          we don't user log4j, but enough other people do that we have to kill it off, hence this dependency.
          -->
