--- a/ncsa-qdl-website/pom.xml
+++ b/ncsa-qdl-website/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>edu.uiuc.ncsa.security</groupId>
     <artifactId>ncsa-qdl-website</artifactId>
-    <version>5.1.0</version>
+    <version>5.1-SNAPSHOT</version>
 
     <name>NCSA QDL Website</name>
     <url>http://cilogon.github.io/</url>
