QDL: Fixed another XML serialization bug. Added more graceful error handling. Support for transcendental functions. Moved more classes.

--- a/ncsa-qdl/pom.xml
+++ b/ncsa-qdl/pom.xml
@@ -231,7 +231,11 @@
             <artifactId>mariadb-java-client</artifactId>
             <version>2.2.5</version>
         </dependency>
-
+        <dependency>
+            <groupId>ch.obermuhlner</groupId>
+            <artifactId>big-math</artifactId>
+            <version>2.3.0</version>
+        </dependency>
     </dependencies>
 
     <profiles>
