--- a/ncsa-security-common/ncsa-security-util/pom.xml
+++ b/ncsa-security-common/ncsa-security-util/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>edu.uiuc.ncsa.security</groupId>
         <artifactId>ncsa-security-common</artifactId>
-        <version>5.2-SNAPSHOT</version>
+        <version>5.2.0</version>
     </parent>
 
     <artifactId>ncsa-security-util</artifactId>
@@ -111,13 +111,13 @@
         <dependency>
             <groupId>edu.uiuc.ncsa.security</groupId>
             <artifactId>ncsa-security-core</artifactId>
-            <version>5.2-SNAPSHOT</version>
+            <version>5.2.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>edu.uiuc.ncsa.security</groupId>
             <artifactId>ncsa-security-core</artifactId>
-            <version>5.2-SNAPSHOT</version>
+            <version>5.2.0</version>
         </dependency>
         <dependency>
             <groupId>net.sf.json-lib</groupId>
