Tightening things up a bit. No changes though.

--- a/ncsa-qdl/src/main/resources/sample.ini
+++ b/ncsa-qdl/src/main/resources/sample.ini
@@ -1,9 +1,14 @@
-// last modified on 1 April 2001 by Robespierre Braithwate.
+// Sample ini (initialization) file. This shows the format that
+// the file uses. See the documentation for more details.
+
 [owner]
-name='Fiona Smythe'
+
+name := 'Fiona Smythe'
 organization := 'Big State University/Physics','Big State University/Astronomy'
 
 [database]
-# use IP address in case network name resolution is not working
-server= '192.168.1.42'
+/* use IP address in case network
+   name resolution is not working */
+server= '192.168.1.42' // use local network.
+
 port=1029
