--- a/ncsa-qdl/src/main/antlr4/iniFile/test.ini
+++ b/ncsa-qdl/src/main/antlr4/iniFile/test.ini
@@ -1,9 +1,13 @@
 // test file for QDL ini format.
  [   qwe ]
+
+
  q:='test'
+
 a := .456, -47, true
-# foo
-b = 'p','q', 345.66
+// foo
+b = 'p','q', 345.66, -3.13E17
 
 [blarf]
+
 z := -234,65.34,'bar'
