Changed how a conditional is figured.

--- a/ncsa-qdl/src/main/antlr4/iniFile/test.ini
+++ b/ncsa-qdl/src/main/antlr4/iniFile/test.ini
@@ -4,9 +4,9 @@
 
  q:='test'
 
-a := .456, -47, true
+a := .456, -47,,, true
 // foo
-b = 'p','q', 345.66, -3.13E17
+b = 'p',,,'q', 345.66, -3.13E17
 
 [blarf]
 
