--- a/ncsa-qdl/pom.xml
+++ b/ncsa-qdl/pom.xml
@@ -8,13 +8,13 @@
             edu.uiuc.ncsa.security
         </groupId>
         <artifactId>ncsa-security-all</artifactId>
-        <version>5.2-SNAPSHOT</version>
+        <version>5.2.5</version>
     </parent>
 
     <artifactId>ncsa-qdl</artifactId>
     <name>The QD Language</name>
     <packaging>jar</packaging>
-    <version>1.4-QDL-SNAPSHOT</version>
+    <version>1,4,5</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <additionalparam>-Xdoclint:none</additionalparam>
@@ -167,24 +167,24 @@
         <dependency>
             <groupId>edu.uiuc.ncsa.security</groupId>
             <artifactId>ncsa-security-core</artifactId>
-            <version>5.2-SNAPSHOT</version>
+            <version>5.2.5</version>
         </dependency>
         <dependency>
             <groupId>edu.uiuc.ncsa.security</groupId>
             <artifactId>ncsa-security-core</artifactId>
-            <version>5.2-SNAPSHOT</version>
+            <version>5.2.5</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>edu.uiuc.ncsa.security</groupId>
             <artifactId>ncsa-security-util</artifactId>
-            <version>5.2-SNAPSHOT</version>
+            <version>5.2.5</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>edu.uiuc.ncsa.security</groupId>
             <artifactId>ncsa-security-util</artifactId>
-            <version>5.2-SNAPSHOT</version>
+            <version>5.2.5</version>
         </dependency>
         <dependency>
             <groupId>net.sf.json-lib</groupId>
@@ -200,34 +200,34 @@
         <dependency>
             <groupId>edu.uiuc.ncsa.security</groupId>
             <artifactId>ncsa-security-util</artifactId>
-            <version>5.2-SNAPSHOT</version>
+            <version>5.2.5</version>
             <scope>test</scope>
         </dependency>
 <!--        <dependency>
             <groupId>edu.uiuc.ncsa.security</groupId>
             <artifactId>ncsa-security-util</artifactId>
-            <version>5.2-SNAPSHOT</version>
+            <version>5.2.5</version>
             <scope>test</scope>
         </dependency>-->
         <dependency>
             <groupId>edu.uiuc.ncsa.security</groupId>
             <artifactId>ncsa-security-util</artifactId>
-            <version>5.2-SNAPSHOT</version>
+            <version>5.2.5</version>
         </dependency>
 <!--        <dependency>
             <groupId>edu.uiuc.ncsa.security</groupId>
             <artifactId>ncsa-security-util</artifactId>
-            <version>5.2-SNAPSHOT</version>
+            <version>5.2.5</version>
         </dependency>-->
         <dependency>
             <groupId>edu.uiuc.ncsa.security</groupId>
             <artifactId>ncsa-security-core</artifactId>
-            <version>5.2-SNAPSHOT</version>
+            <version>5.2.5</version>
         </dependency>
         <dependency>
             <groupId>edu.uiuc.ncsa.security</groupId>
             <artifactId>ncsa-security-storage</artifactId>
-            <version>5.2-SNAPSHOT</version>
+            <version>5.2.5</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
