More set support tests. Found lots of cruft in the documents. re-ran the parser build.

--- a/ncsa-qdl/src/main/resources/sample.ini
+++ b/ncsa-qdl/src/main/resources/sample.ini
@@ -1,5 +1,7 @@
 // Sample ini (initialization) file. This shows the format that
 // the file uses. See the documentation for more details.
+// read it into a workspace with
+// file_read('/path/to/file/sample.ini', 2);
 
 [owner]
 
