--- a/ncsa-qdl/pom.xml
+++ b/ncsa-qdl/pom.xml
@@ -61,7 +61,10 @@
                     <includes>
                         <include>**/*Suite.java</include>
                     </includes>
-                    <forkMode>perTest</forkMode>
+                  <!--  <forkMode>perTest</forkMode>-->
+                    <forkCount>1</forkCount>
+                    <reuseForks>false</reuseForks>
+
                 </configuration>
             </plugin>
             <plugin>
@@ -73,7 +76,10 @@
                         <exclude>**/*Test.java</exclude>
 <!--                        <exclude>**/*Suite.java</exclude> -->
                     </excludes>
-                    <forkMode>perTest</forkMode>
+                  <!--  <forkMode>perTest</forkMode>-->
+                    <forkCount>1</forkCount>
+                    <reuseForks>false</reuseForks>
+
                 </configuration>
             </plugin>
 
@@ -130,11 +136,11 @@
             <artifactId>commons-codec</artifactId>
             <version>1.10</version>
         </dependency>
-        <dependency>
+<!--        <dependency>
             <groupId>commons-cli</groupId>
             <artifactId>commons-cli</artifactId>
             <version>1.3.1</version>
-        </dependency>
+        </dependency>-->
         <!-- OAUTH-179: fix SSL server hostname  vulnerability in previous versions of httpcomponents. -->
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
@@ -157,43 +163,12 @@
         </dependency>
 
 
-        <dependency>
-<!--
-            <groupId>javax.mail</groupId>
-            <artifactId>mail</artifactId>
--->
+<!--        <dependency>
             <groupId>com.sun.mail</groupId>
              <artifactId>javax.mail</artifactId>
             <version>1.6.2</version>
             <scope>provided</scope>
-        </dependency>
-        <!--
-             Inexplicably the next redundant entries must be in this order or maven will not resolve the dependencies.
-             If these are here, it complains bitterly about how pom is almost unusable, and yet it will not build
-             without them. Oy veh!
-        -->
-        <dependency>
-            <groupId>edu.uiuc.ncsa.security</groupId>
-            <artifactId>ncsa-security-core</artifactId>
-            <version>5.2-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>edu.uiuc.ncsa.security</groupId>
-            <artifactId>ncsa-security-core</artifactId>
-            <version>5.2-SNAPSHOT</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>edu.uiuc.ncsa.security</groupId>
-            <artifactId>ncsa-security-util</artifactId>
-            <version>5.2-SNAPSHOT</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>edu.uiuc.ncsa.security</groupId>
-            <artifactId>ncsa-security-util</artifactId>
-            <version>5.2-SNAPSHOT</version>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>net.sf.json-lib</groupId>
             <artifactId>json-lib</artifactId>
@@ -207,33 +182,6 @@
         </dependency>
         <dependency>
             <groupId>edu.uiuc.ncsa.security</groupId>
-            <artifactId>ncsa-security-util</artifactId>
-            <version>5.2-SNAPSHOT</version>
-            <scope>test</scope>
-        </dependency>
-<!--        <dependency>
-            <groupId>edu.uiuc.ncsa.security</groupId>
-            <artifactId>ncsa-security-util</artifactId>
-            <version>5.2-SNAPSHOT</version>
-            <scope>test</scope>
-        </dependency>-->
-        <dependency>
-            <groupId>edu.uiuc.ncsa.security</groupId>
-            <artifactId>ncsa-security-util</artifactId>
-            <version>5.2-SNAPSHOT</version>
-        </dependency>
-<!--        <dependency>
-            <groupId>edu.uiuc.ncsa.security</groupId>
-            <artifactId>ncsa-security-util</artifactId>
-            <version>5.2-SNAPSHOT</version>
-        </dependency>-->
-        <dependency>
-            <groupId>edu.uiuc.ncsa.security</groupId>
-            <artifactId>ncsa-security-core</artifactId>
-            <version>5.2-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>edu.uiuc.ncsa.security</groupId>
             <artifactId>ncsa-security-storage</artifactId>
             <version>5.2-SNAPSHOT</version>
             <scope>compile</scope>
@@ -242,16 +190,19 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.29</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.derby</groupId>
             <artifactId>derby</artifactId>
             <version>10.14.1.0</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>42.2.25.jre7</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
@@ -282,8 +233,8 @@
                                     <mainClass>edu.uiuc.ncsa.qdl.workspace.QDLWorkspace</mainClass>
                                 </manifest>
                                 <manifestEntries>
-                                    <application-version>${pom.version}</application-version>
-                                    <application-name>${pom.name}</application-name>
+                                    <application-version>${project.version}</application-version>
+                                    <application-name>${project.name}</application-name>
                                     <build-time>${timestamp}</build-time>
                                     <implementation-version>${project.version}</implementation-version>
                                     <implementation-build>${buildNumber}</implementation-build>
