--- a/ncsa-security-delegation/ncsa-security-delegation-common/pom.xml
+++ b/ncsa-security-delegation/ncsa-security-delegation-common/pom.xml
@@ -60,5 +60,11 @@
             <version>2.4</version>
             <classifier>jdk15</classifier>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
