--- a/ncsa-security-common/ncsa-security-util/pom.xml
+++ b/ncsa-security-common/ncsa-security-util/pom.xml
@@ -9,6 +9,7 @@
         <version>5.2-SNAPSHOT</version>
     </parent>
 
+
     <artifactId>ncsa-security-util</artifactId>
     <name>NCSA security utilities</name>
     <packaging>jar</packaging>
@@ -83,6 +84,12 @@
             <artifactId>jline</artifactId>
             <version>3.14.1</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.1</version>
+            <scope>test</scope>
         </dependency>
         <!--
         Used for text encryption utility.
