--- a/pom.xml
+++ b/pom.xml
@@ -37,10 +37,11 @@
             <email>gaynor@illinois.edu</email>
         </developer>
     </developers>
-
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <additionalparam>-Xdoclint:none</additionalparam>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
     </properties>
 
     <modules>
@@ -51,7 +52,7 @@
         <module>ncsa-qdl-gui</module>
         <module>java-8</module>
     </modules>
-    <dependencies>
+<!--    <dependencies>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -59,10 +60,10 @@
             <scope>test</scope>
         </dependency>
 
-    </dependencies>
+    </dependencies>-->
     <build>
         <plugins>
-            <plugin>
+<!--            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
@@ -70,7 +71,7 @@
                     <target>1.8</target>
                 </configuration>
                 <version>3.8.1</version>
-            </plugin>
+            </plugin>-->
 
             <plugin>
                 <groupId>org.mortbay.jetty</groupId>
